@@ -21,5 +21,11 @@ Alien::Base = 0.009
 [Prereqs / ConfigureRequires]
 Alien::Base = 0.009
 
+[Prereqs / BuildRequires]
+Alien::Base = 0.009
+
+[Prereqs / TestRequires]
+Alien::Base = 0.009
+
 [Author::Plicease::Upload]
 cpan = 1
